manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ex1-02
  namespace: project-vxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-vxy
  template:
    metadata:
      labels:
        app: project-vxy
    spec:
      volumes:
        - name: shared-bucket
          emptyDir: {}
      containers:
        - name: backend-container
          image: project-vxy-image
          imagePullPolicy: Always
          ports:
          - name: readiness-port
            containerPort: 3300
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 2
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: readiness-port
          volumeMounts:
          - name: shared-bucket
            mountPath: /usr/src/app/media
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
        - name: frontend-container
          image: project-vxy-image
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-bucket
            mountPath: /usr/src/app/media
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
