manifests/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: kube-ex1-02
  namespace: project-vxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-vxy
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-usage
  template:
    metadata:
      labels:
        app: project-vxy
    spec:
      volumes:
        - name: shared-bucket
          emptyDir: {}
      containers:
        - name: backend-container
          image: project-vxy-image
          imagePullPolicy: Always
          ports:
          - name: healthz-port
            containerPort: 3300
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 2
            failureThreshold: 5
            httpGet:
              scheme: HTTP
              path: /healthz
              port: healthz-port
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            httpGet:
              scheme: HTTP
              path: /healthz
              port: healthz-port
          volumeMounts:
          - name: shared-bucket
            mountPath: /usr/src/app/media
          resources:
            limits:
              cpu: "200m"
              memory: "100Mi"
        - name: frontend-container
          image: project-vxy-image
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-bucket
            mountPath: /usr/src/app/media
          resources:
            limits:
              cpu: "200m"
              memory: "100Mi"
