manifests/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: project-vxy-svc
spec:
  type: NodePort
  selector:
    app: project-vxy
  ports:
    - name: http
      nodePort: 30081 # available outside, from 30000 to 32767
      protocol: TCP
      port: 8081 # available to the cluster
      targetPort: 3300 # target port
