manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: project-vxy
spec:
  type: NodePort
  selector:
    app: project-vxy
  ports:
    - name: project-vxy-frontend
      port: 80
      protocol: TCP
      targetPort: 3200
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: project-vxy
spec:
  type: NodePort
  selector:
    app: project-vxy
  ports:
    - name: project-vxy-backend
      port: 80
      protocol: TCP
      targetPort: 3300
