manifests/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: backend-middleware
  # namespace: project-vxy
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-vxy-ingress
  # namespace: project-vxy
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/cache-enable: "false"
    traefik.ingress.kubernetes.io/router.middlewares: default-backend-middleware@kubernetescrd
spec:
  rules:
  - host: localhost
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8080
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 8080
